--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
     "webpack-dev-server": "2.9.7"
   },
   "dependencies": {
+    "antd": "^3.16.1",
+    "moment": "^2.24.0",
     "prop-types": "15.6.0",
     "rc-pagination": "^1.17.13",
     "react": "16.2.0",
+    "react-bootstrap-datetimepicker": "^0.0.22",
+    "react-datetime": "^2.16.3",
     "react-dom": "16.2.0",
     "react-router-dom": "4.2.2",
     "simditor": "2.3.6"
